3 Tek 3/DEVOPS/Bernstein/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  namespace: default
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
    strategy:
      type: recreate
  template:
    metadata:
      labels:
        app: poll
    spec:
      restartPolicy: Always
      containers:
      - image: epitechcontent/t-dop-600-poll:k8s
        name: poll
        resources:
          limits:
            memory: "128M"
        ports:
          - containerPort: 80
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: HOST
            operator: In
            values:
            - PASSWORD
