3 Tek 3/DEVOPS/Bernstein/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    app: postgress
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
      - image: postgres:12
        name: postgres
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgredb
            moutPath: /var/lib/postgresql/data
	volumes:
	- name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pv-claim
