3 Tek 3/DEVOPS/Bernstein/result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: Always
      containers:
      - image: epitechcontent/t-dop-600-result:k8s
        name: result
        resources:
          limits:
            memory: "128M"
        ports:
        - containerPort: 80
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: HOST
            operator: In
            values:
            - PASSWORD
