3 Tek 3/DEVOPS/Bernstein/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      restartPolicy: Always
      containers:
      - image: epitechcontent/t-dop-600-worker:k8s
        name: worker
        resources:
          limits:
            memory: "256Mi"
