3 Tek 3/DEVOPS/Bernstein/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort:	80
  clusterIP: None
  selector:
    app: poll
