3 Tek 3/DEVOPS/Bernstein/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: posgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
  selector:
    app: postgres
