3 Tek 3/DEVOPS/Bernstein/poll.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: poll.dop.io
  - http:
      paths:
      - path: /
        backend:
          service:
            serviceName: poll-service
            servicePort: 80
