3 Tek 3/DEVOPS/Bernstein/result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
      - path: /
        #pathtype
        backend:
          service:
            name: result-service
            port:
              number: 80
